addressing 508 issues with table heads and color contrast

--- a/LEAF_Request_Portal/css/style.css
+++ b/LEAF_Request_Portal/css/style.css
@@ -453,6 +453,10 @@ table.leaf_grid>tbody {
     background-color: white;
 }
 
+.agenda th {
+    padding: 8px 4px 8px 4px;
+    border: 1px solid black;
+}
 
 .agenda td {
     padding: 8px 4px 8px 4px;
@@ -887,7 +891,7 @@ span.browsetitle a {
 
 span.browsetypes {
     font-size: 80%;
-    color: #a2a2a2;
+    color: #707070;
 }
 
 .button {
